tests/negative/gold/static-setter-test.gold
tests/negative/static-setter-test.toit:9:3: error: Argument mismatch for 'foo'
  foo 42
  ^~~
Compilation failed
